feat: reviewed by 233

--- a/problems-review/220~250.ipynb
+++ b/problems-review/220~250.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import statistics\n",
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -629,13 +640,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make array\n",
+    "\n",
+    "array = [[0] * 2 for i in range(3)]\n",
+    "\n",
+    "# input data \n",
+    "for i in range(6):\n",
+    "    array[i//2][i % 2] = random.randrange(1,101)\n",
+    "array\n",
+    "\n",
+    "# Vertical\n",
+    "v_sum1 = 0\n",
+    "v_sum2 = 0\n",
+    "v_avg = []\n",
+    "\n",
+    "for i in range(3):\n",
+    "    v_sum1 += array[i][0] / 3\n",
+    "    v_sum2 += array[i][1] / 3\n",
+    "    \n",
+    "v_avg.append(v_sum1)\n",
+    "v_avg.append(v_sum2)\n",
+    "\n",
+    "# Horizontal\n",
+    "\n",
+    "h_sum1 = 0\n",
+    "h_sum2 = 0\n",
+    "h_sum3 = 0\n",
+    "\n",
+    "h_avg = []\n",
+    "\n",
+    "for i in range(2):\n",
+    "    h_sum1 += array[0][i] / 2\n",
+    "    h_sum2 += array[1][i] / 2\n",
+    "    h_sum3 += array[2][i] / 2\n",
+    "\n",
+    "h_avg.append(h_sum1)    \n",
+    "h_avg.append(h_sum2)\n",
+    "h_avg.append(h_sum3)    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "CPU times: user 2 µs, sys: 0 ns, total: 2 µs\n",
+      "Wall time: 5.25 µs\n",
       "[16, 27]\n",
       "[39, 100]\n",
       "[19, 88]\n",
@@ -646,6 +704,7 @@
     }
    ],
    "source": [
+    "%time\n",
     "import math\n",
     "array = [[16, 27], [39, 100], [19, 88]]\n",
     "for i in range(3):\n",
@@ -672,6 +731,59 @@
     "\n",
     "# 전체 평균\n",
     "print(sum1/6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2 µs, sys: 0 ns, total: 2 µs\n",
+      "Wall time: 5.96 µs\n",
+      "row_avg: [73.5, 41.0, 41.0], hor_avg: [58.33333333333333, 45.333333333333336], total_avg: [51.833333333333336]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#크! 내가한게 더 깔끔스무승~\n",
+    "%time\n",
+    "# make array\n",
+    "\n",
+    "array = [[0] * 2 for i in range(3)]\n",
+    "\n",
+    "# input data \n",
+    "for i in range(6):\n",
+    "    array[i//2][i % 2] = random.randrange(1,101)\n",
+    "array\n",
+    "\n",
+    "\n",
+    "#avg\n",
+    "row_avg = []\n",
+    "hor_avg = []\n",
+    "total_avg = []\n",
+    "#row\n",
+    "for i in range(3):\n",
+    "    row_avg.append(sum(array[i])/2)\n",
+    "#hor\n",
+    "for i in range(2):\n",
+    "    hor_sum = 0\n",
+    "\n",
+    "    for j in range(3):\n",
+    "        hor_sum += array[j][i] / 3\n",
+    "\n",
+    "    hor_avg.append(hor_sum)\n",
+    "\n",
+    "# total avg \n",
+    "total_avg.append(statistics.mean([num for nums in array for num in nums]))\n",
+    "        \n",
+    "    \n",
+    "print(\"row_avg: {}, hor_avg: {}, total_avg: {}\".format(row_avg, hor_avg, total_avg))\n",
+    "\n",
+    "\n"
    ]
   },
   {
