--- a/problems-review/note.ipynb
+++ b/problems-review/note.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,36 +11,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import statistics\n",
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'samtsirhC yrreM'"
+       "[[47, 74], [80, 100], [10, 42]]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a[::-1]"
+    "# make array\n",
+    "\n",
+    "array = [[0] * 2 for i in range(3)]\n",
+    "\n",
+    "# input data \n",
+    "for i in range(6):\n",
+    "    array[i//2][i % 2] = random.randrange(1,101)\n",
+    "array\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "row_avg: [26.0, 78.5, 63.5], hor_avg: [73.66666666666666, 38.333333333333336], total_avg: [56]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# make array\n",
+    "\n",
+    "array = [[0] * 2 for i in range(3)]\n",
+    "\n",
+    "# input data \n",
+    "for i in range(6):\n",
+    "    array[i//2][i % 2] = random.randrange(1,101)\n",
+    "array\n",
+    "\n",
+    "\n",
+    "#avg\n",
+    "row_avg = []\n",
+    "hor_avg = []\n",
+    "total_avg = []\n",
+    "#row\n",
+    "for i in range(3):\n",
+    "    row_avg.append(sum(array[i])/2)\n",
+    "#hor\n",
+    "for i in range(2):\n",
+    "    hor_sum = 0\n",
+    "\n",
+    "    for j in range(3):\n",
+    "        hor_sum += array[j][i] / 3\n",
+    "\n",
+    "    hor_avg.append(hor_sum)\n",
+    "\n",
+    "# total avg \n",
+    "total_avg.append(statistics.mean([num for nums in array for num in nums]))\n",
+    "        \n",
+    "    \n",
+    "print(\"row_avg: {}, hor_avg: {}, total_avg: {}\".format(row_avg, hor_avg, total_avg))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Merry Christmas']"
+       "[31, 21, 94, 63, 96, 31]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,34 +117,6 @@
    "source": [
     "a"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
