feat: reviewed by 234" ;

--- a/problems-review/220~250.ipynb
+++ b/problems-review/220~250.ipynb
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +814,7 @@
    "source": [
     "word = input(\"insert word: \")\n",
     "def isHandsome(str):\n",
-    "    for i in range(len(word)):3\n",
+    "    for i in range(len(word)):\n",
     "        if word[i] == word[len(word)-1-i]:\n",
     "            return True\n",
     "        else:\n",
@@ -822,6 +822,27 @@
     "        \n",
     "if isHandsome(word) == True:\n",
     "    print(\"Handsome\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#내거가 맞는듯 ;\n",
+    "def handsome(str):\n",
+    "    a = \"\"\n",
+    "    b = \"\"\n",
+    "    for i in range(len(str)):\n",
+    "        a += str[i]\n",
+    "        b += str[-i-1]\n",
+    "        \n",
+    "    if a == b:\n",
+    "        print(\"Handsome\")\n",
+    "    else:\n",
+    "        print(\"Not Handsome\")\n",
+    "handsome(\"brarb\")"
    ]
   },
   {
