--- a/problems-review/note.ipynb
+++ b/problems-review/note.ipynb
@@ -120,6 +120,115 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert some text: asdf\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = input(\"insert some text: \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def handsome(str):\n",
+    "    a = \"\"\n",
+    "    b = \"\"\n",
+    "    for i in range(len(str)):\n",
+    "        a += str[i]\n",
+    "        b += str[-i-1]\n",
+    "        \n",
+    "    if a == b:\n",
+    "        print(\"Handsome\")\n",
+    "    else:\n",
+    "        print(\"Not Handsome\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Handsome\n"
+     ]
+    }
+   ],
+   "source": [
+    "handsome(\"brarb\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert word: toat\n",
+      "Handsome\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = input(\"insert word: \")\n",
+    "def isHandsome(str):\n",
+    "    for i in range(len(word)):\n",
+    "        if word[i] == word[len(word)-1-i]:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "            break\n",
+    "        \n",
+    "if isHandsome(word) == True:\n",
+    "    print(\"Handsome\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "'return' outside function (<ipython-input-27-e6abe9a15ac4>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-27-e6abe9a15ac4>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    return True\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    if i == 0:\n",
+    "        print(\"True\")\n",
+    "        return True\n",
+    "    elif i == 1:\n",
+    "        print(\"1 is True\")\n",
+    "        return True\n",
+    "    else:\n",
+    "        print(\"False\")\n",
+    "        return False\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
