feat: reviewed by 235

--- a/problems-review/220~250.ipynb
+++ b/problems-review/220~250.ipynb
@@ -902,6 +902,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#내거가 더 깔끔한듯?ㅋ\n",
+    "array = [0] * 10\n",
+    "for i in range(10):\n",
+    "    if i <= 1:\n",
+    "        array[i] = int(input(\"insert number: \"))\n",
+    "    else:\n",
+    "        array[i] = array[i-2] * array[i-1] % 10\n",
+    "array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def print_arr(arr):\n",
     "    for i in range(len(arr)):\n",
     "        for j in range(len(arr[i])):\n",
