--- a/problems-review/note.ipynb
+++ b/problems-review/note.ipynb
@@ -201,31 +201,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "'return' outside function (<ipython-input-27-e6abe9a15ac4>, line 4)",
+     "evalue": "'return' outside function (<ipython-input-29-3d70919b0505>, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-27-e6abe9a15ac4>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    return True\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-29-3d70919b0505>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    return True\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
      ]
     }
    ],
    "source": [
-    "for i in range(5):\n",
-    "    if i == 0:\n",
-    "        print(\"True\")\n",
-    "        return True\n",
-    "    elif i == 1:\n",
-    "        print(\"1 is True\")\n",
-    "        return True\n",
-    "    else:\n",
-    "        print(\"False\")\n",
-    "        return False\n",
-    "        break"
+    "#235\n",
+    "# 길이가 10인 1차원 배열을 만들고, 10 미만의 자연수 2개를 입력받아, 첫번째 원소와 두번째 원소를 입력받은 수로 초기화\n",
+    "# 세 번째 원소부터 마지막 원소까지는 전전항과 전항을 곱한 값의 1의 자리\n",
+    "\n",
+    "#ex) Enter the two number\n",
+    "#[3, 4, 2, 8, 6, 8, 8, 4, 2, 8]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert number: 3\n",
+      "insert number: 4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[3, 4, 2, 8, 6, 8, 8, 4, 2, 8]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array = [0] * 10\n",
+    "for i in range(10):\n",
+    "    if i <= 1:\n",
+    "        array[i] = int(input(\"insert number: \"))\n",
+    "    else:\n",
+    "        array[i] = array[i-2] * array[i-1] % 10\n",
+    "array\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "102 % 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert number: 3\n",
+      "insert number: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = []\n",
+    "for _ in range(2):\n",
+    "    num.append(int(input(\"insert number: \")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
