--- a/problems-review/220~250.ipynb
+++ b/problems-review/220~250.ipynb
@@ -1028,6 +1028,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sentence = input(\"Enter the sentence: \")\n",
+    "students = [i for i in range(1,21)]\n",
+    "students\n",
+    "did_hw = []\n",
+    "a = \"2 6 4 16 19 11 5\"\n",
+    "for i in a.split(\" \"):\n",
+    "    did_hw.append(int(i))\n",
+    "did_hw\n",
+    "\n",
+    "for i in did_hw:\n",
+    "    students.remove(i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#239 문제집 참조;"
    ]
   },
@@ -1135,6 +1154,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import collections\n",
+    "\n",
+    "numbers = []\n",
+    "while True:\n",
+    "    try:\n",
+    "        numbers.append(int(input(\"insert numbers: \")))\n",
+    "    except:\n",
+    "        break\n",
+    "\n",
+    "a = dict(collections.Counter(numbers))\n",
+    "a = collections.OrderedDict(sorted(a.items()))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -1165,7 +1203,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = input(\"insert word: \")\n",
+    "b = input(\"insert word: \")\n",
+    "\n",
+    "if collections.Counter(a) - collections.Counter(b):\n",
+    "    print(\"not same\")\n",
+    "else:\n",
+    "    print(\"same\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -1214,7 +1260,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = []\n",
+    "b = 1\n",
+    "while len(a) < 100:\n",
+    "    try:\n",
+    "        b = int(input(\"insert number\"))\n",
+    "        if b == 0:\n",
+    "            break\n",
+    "        a.append(b)\n",
+    "    except:\n",
+    "        break\n",
+    "a.sort(reverse = True)\n",
+    "a"
+   ]
   },
   {
    "cell_type": "code",
@@ -1306,7 +1365,7 @@
     "        if i == 0 or j == 0: #첫째 행이나 열은 1\n",
     "            array[i][j] = 1\n",
     "        else:\n",
-    "            array[i][j] = array[i-1][j] + array[i][j - 1]\n",
+    "            array[i][j] = array[i-1][j] + array[i][j-1]\n",
     "            \n",
     "def printarray(array):\n",
     "    for i in range(len(array)):\n",
@@ -1339,13 +1398,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Enter the number: 1 2 3 4 5\n",
       "1 2 3 4 5 \n",
       "2 3 4 5 1 \n",
       "3 4 5 1 2 \n",
@@ -1374,11 +1434,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2, 3, 4, 5],\n",
+       " [2, 3, 4, 5, 1],\n",
+       " [3, 4, 5, 1, 2],\n",
+       " [4, 5, 1, 2, 3],\n",
+       " [5, 1, 2, 3, 4]]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 크 'ㅡ'\n",
+    "def make_array(n):\n",
+    "    \n",
+    "    array = [[0] * n for i in range(n)]\n",
+    "    array\n",
+    "    for i in range(n):\n",
+    "        for j in range(n):\n",
+    "            if i == 0: \n",
+    "                array[i][j%n] = j+1\n",
+    "            else:\n",
+    "                if j+1 > n-1:\n",
+    "                    array[i][j%n] = array[i-1][j-(n-1)]      \n",
+    "                else:\n",
+    "                    array[i][j%n] = array[i-1][j+1]\n",
+    "    return array\n",
+    "make_array(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#245 숫자(n)이 입력되면 다음과 같은 규칙을 만들어내는 배열을 만드시오 \n",
+    "# 245 숫자(n)이 입력되면 다음과 같은 규칙을 만들어내는 배열을 만드시오 \n",
     "\n",
     "\n",
     "# Entered number: 3\n",
@@ -1397,24 +1496,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n",
-      "3\n",
-      "2\n",
-      "1\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for i in range(4, -1, -1):\n",
-    "    print(i)"
+    "# 내풀이\n",
+    "def fun_array(n):\n",
+    "    array = [[0] * n for i in range(n)]\n",
+    "\n",
+    "    for i in range(n):\n",
+    "        for j in range(n):\n",
+    "            if i == 0:\n",
+    "                array[j][i] = j+1\n",
+    "\n",
+    "            elif i != 0 and i % 2 != 0:\n",
+    "                if j == 0:\n",
+    "                    array[-j-1][i] = array[-j-1][i-1] + 1\n",
+    "                else:\n",
+    "                    array[-j-1][i] = array[-j][i] + 1\n",
+    "            else:\n",
+    "                if j == 0:\n",
+    "                    array[j][i] = array[j][i-1] + 1\n",
+    "                else:\n",
+    "                    array[j][i] = array[j-1][i] + 1\n",
+    "    return array\n",
+    "fun_array(5)"
    ]
   },
   {
@@ -1481,6 +1587,61 @@
     "#     11 | 12| 13 | 14| 15\n",
     "#     20 | 19| 18 | 17| 16\n",
     "#     21 | 22| 23 | 24| 25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 내 풀이\n",
+    "def fun_array(n):\n",
+    "    array = [[0] * n for i in range(n)]\n",
+    "\n",
+    "    for i in range(n):\n",
+    "        for j in range(n):\n",
+    "            if i == 0:\n",
+    "                array[i][j] = j+1\n",
+    "\n",
+    "            elif i != 0 and i % 2 != 0:\n",
+    "                if j == 0:\n",
+    "                    array[i][-j-1] = array[i-1][-j-1] + 1\n",
+    "                else:\n",
+    "                    array[i][-j-1] = array[i][-j] + 1\n",
+    "            else:\n",
+    "                if j == 0:\n",
+    "                    array[i][j] = array[i-1][j] + 1\n",
+    "                else:\n",
+    "                    array[i][j] = array[i][j-1] + 1\n",
+    "    return array\n",
+    "fun_array(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array = [[0] * 5 for i in range(5)]\n",
+    "\n",
+    "for i in range(5):\n",
+    "    for j in range(5):\n",
+    "        if i == 0:\n",
+    "            array[i][j] = j+1\n",
+    "    \n",
+    "        elif i != 0 and i % 2 != 0:\n",
+    "            if j == 0:\n",
+    "                array[i][-j-1] = array[i-1][-j-1] + 1\n",
+    "            else:\n",
+    "                array[i][-j-1] = array[i][-j] + 1\n",
+    "        else:\n",
+    "            if j == 0:\n",
+    "                array[i][j] = array[i-1][j] + 1\n",
+    "            else:\n",
+    "                array[i][j] = array[i][j-1] + 1\n",
+    "array"
    ]
   },
   {
