feat: reviewed by 247

--- a/problems-review/220~250.ipynb
+++ b/problems-review/220~250.ipynb
@@ -1568,6 +1568,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 10, 11, 20, 21],\n",
+       " [2, 9, 12, 19, 22],\n",
+       " [3, 8, 13, 18, 23],\n",
+       " [4, 7, 14, 17, 24],\n",
+       " [5, 6, 15, 16, 25]]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "n = 5\n",
+    "array = [[0] * n for i in range(n)]\n",
+    "\n",
+    "a = 1\n",
+    "for i in range(n):\n",
+    "    if i % 2 == 0:\n",
+    "        for j in range(n):\n",
+    "            array[j][i] = a\n",
+    "            a += 1\n",
+    "    else:\n",
+    "        for j in range(n):\n",
+    "            array[-j-1][i] = a\n",
+    "            a += 1\n",
+    "array"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
