--- a/problems-review/note.ipynb
+++ b/problems-review/note.ipynb
@@ -30,46 +30,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n",
-      "3\n",
-      "2\n",
-      "1\n",
-      "0\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[[1, 10, 11, 20, 21],\n",
+       " [2, 9, 12, 19, 22],\n",
+       " [3, 8, 13, 18, 23],\n",
+       " [4, 7, 14, 17, 24],\n",
+       " [5, 6, 15, 16, 25]]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for i in range(4,-1,-1):\n",
-    "    print(i)"
+    "\n",
+    "n = 5\n",
+    "array = [[0] * n for i in range(n)]\n",
+    "\n",
+    "a = 1\n",
+    "for i in range(n):\n",
+    "    if i % 2 == 0:\n",
+    "        for j in range(n):\n",
+    "            array[j][i] = a\n",
+    "            a += 1\n",
+    "    else:\n",
+    "        for j in range(n):\n",
+    "            array[-j-1][i] = a\n",
+    "            a += 1\n",
+    "array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n",
-      "3\n",
-      "2\n",
-      "1\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "for i in reversed(range(5)):\n",
-    "    print(i)"
+    "array = [[0] * n for i in range(n)]\n",
+    "\n",
+    "for i in range(n):\n",
+    "    for j in range(n):\n",
+    "        "
    ]
   },
   {
