--- a/problems-review/220~250.ipynb
+++ b/problems-review/220~250.ipynb
@@ -1748,7 +1748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1757,11 +1757,51 @@
      "text": [
       "Enter the number: 3 4\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2, 4, 7], [3, 5, 8, 10], [6, 9, 11, 12]]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "n, m = input(\"Enter the number: \").split(\" \")\n",
-    "n, m = int(n), int(m)"
+    "n, m = int(n), int(m)\n",
+    "array = [[0] * m for i in range(n)]\n",
+    "\n",
+    "k = 1\n",
+    "\n",
+    "for num in range(0, n+m-1):\n",
+    "    i = 0\n",
+    "    j = 0\n",
+    "    a = array[i][j]\n",
+    "    \n",
+    "    #2. a가 0 이 아닌동안 계속 진행이 된다. \n",
+    "    #3. array[0][1]을 할당하고\n",
+    "    while a != 0:\n",
+    "        if j != m-1:\n",
+    "            j += 1\n",
+    "            a = array[i][j]\n",
+    "        else:\n",
+    "            i += 1\n",
+    "            a = array[i][j]\n",
+    "            \n",
+    "    #1. 맨처음에 1. 이 작업이 진행된다.\n",
+    "    #4. array[0][1]에 k =2 를 집어넣고, \\\n",
+    "    #array[1,0] 에 k = 3을 집어넣고 위로 가서 포문을 다시 돌린다.\n",
+    "    \n",
+    "\n",
+    "    while i + j == num and n-1 >= i >= 0 and m-1 >= j >= 0:\n",
+    "        array[i][j] = k\n",
+    "        i += 1\n",
+    "        j -= 1\n",
+    "        k += 1\n",
+    "array"
    ]
   },
   {
