feat: reviewed again by 131

--- a/problems-review/101~131.ipynb
+++ b/problems-review/101~131.ipynb
@@ -249,7 +249,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "scores = {\"Dohee\": {\"수학\" : 76, \"과학\":89, \"영어\":93},\\\n",
+    "         \"Juwon\": {\"수학\" : 88, \"과학\":87, \"영어\":100},\\\n",
+    "         \"Seohee\": {\"수학\" : 86, \"과학\":93, \"영어\":82}}\n",
+    "each_average = []\n",
+    "for i in scores:\n",
+    "    a = statistics.mean(scores[i].values())\n",
+    "    each_average.append(a)\n",
+    "    print(a)\n",
+    "    \n",
+    "print(statistics.mean(each_average))"
+   ]
   }
  ],
  "metadata": {
