--- a/problems-review/note.ipynb
+++ b/problems-review/note.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,64 +13,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "k = 1\n",
-    "for i in rnage(5):\n",
-    "    if i % 2 == 0:\n",
-    "        for j in range(5):\n",
-    "            array[j][i] = k\n",
-    "            k += 1\n",
-    "            \n",
-    "    else:\n",
-    "        for j in range()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[[1, 10, 11, 20, 21],\n",
-       " [2, 9, 12, 19, 22],\n",
-       " [3, 8, 13, 18, 23],\n",
-       " [4, 7, 14, 17, 24],\n",
-       " [5, 6, 15, 16, 25]]"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
     }
    ],
    "source": [
-    "\n",
-    "n = 5\n",
-    "array = [[0] * n for i in range(n)]\n",
-    "\n",
-    "a = 1\n",
-    "for i in range(n):\n",
-    "    if i % 2 == 0:\n",
-    "        for j in range(n):\n",
-    "            array[j][i] = a\n",
-    "            a += 1\n",
-    "    else:\n",
-    "        for j in range(n):\n",
-    "            array[-j-1][i] = a\n",
-    "            a += 1\n",
-    "array"
+    "def common_divisor(n):\n",
+    "    cd = []\n",
+    "    for i in range(2, n+1):\n",
+    "        if n % i == 0:\n",
+    "            cd.append(i)\n",
+    "    return cd\n",
+    "for i in common_divisor(16):\n",
+    "    if i in common_divisor(30):\n",
+    "        print(i)"
    ]
   },
   {
@@ -82,30 +45,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "86\n",
+      "91.66666666666667\n",
+      "87\n",
+      "88.22222222222223\n"
+     ]
+    }
+   ],
    "source": [
-    "array = [[0] * n for i in range(n)]\n",
+    "scores = {\"Dohee\": {\"수학\" : 76, \"과학\":89, \"영어\":93},\\\n",
+    "         \"Juwon\": {\"수학\" : 88, \"과학\":87, \"영어\":100},\\\n",
+    "         \"Seohee\": {\"수학\" : 86, \"과학\":93, \"영어\":82}}\n",
+    "each_average = []\n",
+    "for i in scores:\n",
+    "    a = statistics.mean(scores[i].values())\n",
+    "    each_average.append(a)\n",
+    "    print(a)\n",
+    "    \n",
+    "print(statistics.mean(each_average))\n",
     "\n",
-    "for i in range(n):\n",
-    "    for j in range(n):\n",
-    "        "
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
