feat reviewed again by 158

--- a/problems-review/note.ipynb
+++ b/problems-review/note.ipynb
@@ -13,31 +13,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
-   "source": [
-    "def common_divisor(n):\n",
-    "    cd = []\n",
-    "    for i in range(2, n+1):\n",
-    "        if n % i == 0:\n",
-    "            cd.append(i)\n",
-    "    return cd\n",
-    "for i in common_divisor(16):\n",
-    "    if i in common_divisor(30):\n",
-    "        print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -45,40 +20,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "86\n",
-      "91.66666666666667\n",
-      "87\n",
-      "88.22222222222223\n"
+      "insert numbers: 34 15 2 64 194 7\n"
      ]
     }
    ],
    "source": [
-    "scores = {\"Dohee\": {\"수학\" : 76, \"과학\":89, \"영어\":93},\\\n",
-    "         \"Juwon\": {\"수학\" : 88, \"과학\":87, \"영어\":100},\\\n",
-    "         \"Seohee\": {\"수학\" : 86, \"과학\":93, \"영어\":82}}\n",
-    "each_average = []\n",
-    "for i in scores:\n",
-    "    a = statistics.mean(scores[i].values())\n",
-    "    each_average.append(a)\n",
-    "    print(a)\n",
-    "    \n",
-    "print(statistics.mean(each_average))\n",
+    "n = input(\"insert numbers: \").split(\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['34', '15', '2', '64', '194', '7']"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1333"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = input(\"insert numbers: \").split(\" \")\n",
     "\n",
-    "\n"
+    "a = \"\"\n",
+    "for i in n:\n",
+    "    a += i\n",
+    "\n",
+    "\n",
+    "b = []\n",
+    "for i in range(len(str(a))//3 + 1):\n",
+    "    b.append(a[3*i:3+(3*i)])\n",
+    "\n",
+    "sum(map(int,b))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
@@ -86,21 +109,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "n = random.randrange(1, 101)\n",
+    "\n",
+    "while True:\n"
+   ]
   }
  ],
  "metadata": {
