--- a/problems-review/132-152.ipynb
+++ b/problems-review/132-152.ipynb
@@ -135,6 +135,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert numbers: 34 15 2 64 194 7\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1333"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = input(\"insert numbers: \").split(\" \")\n",
+    "\n",
+    "a, b = \"\", []\n",
+    "for i in n:\n",
+    "    a += i\n",
+    "\n",
+    "for i in range(len(str(a))//3 + 1):\n",
+    "    b.append(a[3*i:3+(3*i)])\n",
+    "\n",
+    "sum(map(int,b))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
